<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloRegistro"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:layout_gravity="center"
            android:text="@string/tvSobreTi"/>

        <EditText
            android:id="@+id/etMail1"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:hint="@string/etCorreoElectronicoRegistro"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/etMail2"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:hint="@string/etConfirmaCorreo"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmarMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmaCorreo"
            android:visibility="gone"/>



        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:hint="@string/etNombre"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:hint="@string/etApellidos"
            android:visibility="gone"/>
        <RadioGroup
            android:id="@+id/rgGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone">
            <RadioButton
                android:id="@+id/rbHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbHombre"/>
            <RadioButton
                android:id="@+id/rbMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbMujer"/>
            <RadioButton
                android:id="@+id/rbOtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbOtro"/>
        </RadioGroup>
        <EditText
            android:id="@+id/etEdadPersona"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:hint="@string/etEdad"
            android:inputType="number"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSiguiente"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/etPass1"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:inputType="textPassword"
            android:hint="@string/etContrasenaRegistro"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etPass2"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:inputType="textPassword"
            android:hint="@string/etConfirmaContrasena"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSiguiente"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/svMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloMascota"
                    android:textStyle="bold"
                    android:textSize="35sp"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/etNombreMascota"
                    android:layout_width="match_parent"
                    android:layout_height="150px"
                    android:hint="@string/etNombreMascota"
                    android:visibility="gone"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRaza"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"/>
                <Spinner
                    android:id="@+id/spinnerRaza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/tvSexo"/>
                <RadioGroup
                    android:id="@+id/rgSexoPerro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbMacho"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbHembra"/>

                </RadioGroup>

                <ImageView
                    android:id="@+id/ivFoto"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/imagen_doginder"
                    android:layout_margin="50px"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnImagen"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="@string/etDescripcion"
                    android:layout_marginTop="25dp"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/etEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etEdadMascota"
                    android:visibility="gone"
                    />
                <TextView
                    android:id="@+id/tvRelacionHumanos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRelacionHumanos"
                    android:visibility="gone"
                    />
                <RadioGroup
                    android:id="@+id/rgRelacionPersonas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbBien"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbIndiferente"
                        android:layout_marginHorizontal="70dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbMal"/>
                </RadioGroup>
                <TextView
                    android:id="@+id/tvRelacionMascotas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"

                    android:text="@string/tvRelacionPerros"/>
                <RadioGroup
                    android:id="@+id/rgRelacionMascotas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbMal"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbIndiferente"
                        android:layout_marginHorizontal="70dp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbIndiferente"/>
                </RadioGroup>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btnRegistrar"/>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>