<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/naranjaMain"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/naranjaFlojo"
            android:padding="30dp"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btnAtras"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/back_flecha"
                android:scaleType="fitCenter"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/ivatras"
                android:background="@android:color/transparent"
                />
            <ImageView
                android:id="@id/ivFoto"
                android:layout_width="100dp"
                android:layout_weight="2"
                android:layout_height="100dp"
                android:contentDescription="@string/ivmascota"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/tvNombrePerro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:layout_weight="8"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="25sp" />


        </LinearLayout>



        <!-- Área para mostrar mensajes -->
        <ScrollView
            android:id="@+id/svMensajes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/svmensajes"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/llContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <!-- Campo de entrada para escribir mensajes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="bottom">
            <EditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/poppins_light_italic"
                android:hint="@string/escribe_tu_mensaje"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:layout_weight="2"
                android:padding="16dp"
                android:autofillHints="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:fontFamily="@font/poppins_black"
                android:text="@string/enviar"
                android:background="@drawable/rounded_image"
                android:backgroundTint="@color/naranjaFlojo"
                android:layout_weight="8"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>